# TarifiytApp

./: .gitignore  Makefile  README.md  compose.yaml
.github/workflows/: commit_and_pr_checks.yml
backend/: .env.ci  Dockerfile  alembic.ini  makefile  pyproject.toml  test.py
backend/api/api/src/: main.py  tarifiyt_http.py
backend/api/api/src/cli/: main.py
backend/api/api/src/containers/: container.py  database.py  database_factory.py  interactors.py  repositories.py
backend/api/api/src/routers/: lessons.py
backend/api/api/tests/: TestLessonsEndpoint.py
backend/api/data/src/db_models/: LessonDB.py
backend/api/data/src/lessons/: fake_repository.py  lessons_repository_logic.py
backend/api/data/tests/: test_lessons_repository_logic.py
backend/api/domain/src/interactors/: get_all_lessons_interactor.py
backend/api/domain/src/mappers/: lesson_db_mapper.py
backend/api/domain/src/models/: Lesson.py
backend/api/domain/src/repositories/: lessons_repository.py
backend/api/domain/tests/fixtures/: database.py  factories.py
backend/api/domain/tests/lessons/: test_get_all_lessons_interactor.py
backend/api/fixtures/: app.py  factories.py
backend/migrations/: env.py
backend/scripts/: seed_database.py
